DT-2872 fixes the pagination issues and display issues on mobile for surety (scroll hijacking)

--- a/src/client/components/molecules/surety-lookup/surety-lookup.scss
+++ b/src/client/components/molecules/surety-lookup/surety-lookup.scss
@@ -58,7 +58,7 @@
 .cardContainer {
     overflow-y: auto;
 
-    height: 657px;
+    // height: 657px;
     padding-top: 30px;
 }
 
